<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/identity_white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_marginTop="0dp"
        android:background="@color/identity_purple"
        android:orientation="vertical">
        <ImageView
            android:id="@+id/logo_bar"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_marginTop="8dp"
            android:src="@drawable/logo"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="220dp"
            android:text="@string/app_name"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_marginTop="120dp"
            android:text="@string/hintSenha"
            android:textColor="@color/identity_green"/>
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <EditText
                android:id="@+id/edSenha"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:textColor="@color/identity_lightgrey"
                android:inputType="number|textPassword"
                android:maxLength="6"
                />
        </android.support.design.widget.TextInputLayout>
        <TextView
            android:id="@+id/initialize"
            android:layout_width="170dp"
            android:layout_height="60dp"
            android:gravity="center_horizontal|center_vertical"
            android:layout_marginLeft="85dp"
            android:layout_marginTop="30dp"
            android:textColor="@color/identity_white"
            android:textStyle="bold"
            android:text="@string/ok"
            />
    </LinearLayout>

</LinearLayout>