<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/identity_purple">

    <RelativeLayout
        android:id="@+id/group_department"
        android:layout_width="match_parent"
        android:layout_height="170dp">

        <TextView
            android:id="@+id/department_code"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="35dp"
            android:layout_marginLeft="15dp"
            android:text="@string/department_code"
            android:textColor="@color/identity_green"
            android:textStyle="bold"
            android:textSize="25sp"/>

        <EditText
            android:id="@+id/edDepartmentCode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="80dp"
            android:layout_marginLeft="15dp"
            android:textColorHint="@color/identity_white"
            android:textColor="@color/identity_white"
            android:ellipsize="start"
            android:enabled="true"
            android:editable="true"
            android:inputType="number" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/group_token"
        android:layout_width="match_parent"
        android:layout_height="170dp">

        <TextView
            android:id="@+id/department_token"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="35dp"
            android:layout_marginLeft="15dp"
            android:text="@string/department_token"
            android:textColor="@color/identity_green"
            android:textStyle="bold"
            android:textSize="25sp"/>

        <EditText
            android:id="@+id/edDepartmentToken"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="80dp"
            android:layout_marginLeft="15dp"
            android:textColorHint="@color/identity_white"
            android:textColor="@color/identity_white"
            android:ellipsize="start"
            android:enabled="true"
            android:editable="true"
            android:inputType="number" />

    </RelativeLayout>

    <Button
        android:id="@+id/btPOSLink"
        android:layout_width="170dp"
        android:layout_height="60dp"
        android:layout_marginTop="35dp"
        android:layout_marginLeft="100dp"
        android:background="@drawable/button_selector"
        android:text="@string/init_pos"
        android:textColor="@color/identity_white"
        android:textStyle="bold"/>
</LinearLayout>